--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 *.userosscache
 *.sln.docstates
 
+bin/*
+bin-int/*
+packages/*
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
