--- a/MofuEngine/MofuEngine.vcxproj
+++ b/MofuEngine/MofuEngine.vcxproj
@@ -104,7 +104,11 @@
     <ClCompile Include="Core\Engine.cpp" />
     <ClCompile Include="Core\Main.cpp" />
     <ClCompile Include="Graphics\D3D12\D3D12Core.cpp" />
+    <ClCompile Include="Graphics\D3D12\D3D12DescriptorHeap.cpp" />
+    <ClCompile Include="Graphics\D3D12\D3D12Helpers.cpp" />
     <ClCompile Include="Graphics\D3D12\D3D12Interface.cpp" />
+    <ClCompile Include="Graphics\D3D12\D3D12Resources.cpp" />
+    <ClCompile Include="Graphics\D3D12\D3D12Surface.cpp" />
     <ClCompile Include="Graphics\Renderer.cpp" />
     <ClCompile Include="Platform\Platform.cpp" />
     <ClCompile Include="Platform\Win32Platform.cpp" />
