--- a/ExampleApp/ExampleApp.vcxproj.filters
+++ b/ExampleApp/ExampleApp.vcxproj.filters
@@ -27,4 +27,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Natvis Include="..\MofuEngine\External\imgui\misc\imgui.natvis" />
+  </ItemGroup>
 </Project>
