--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -1,12 +1,123 @@
 [Window][Debug##Default]
 Pos=60,60
-Size=400,400
+Size=100,32
 Collapsed=0
 
 [Window][Hello, world!]
+Pos=994,0
+Size=286,720
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Dear ImGui Demo]
+Pos=0,0
+Size=992,720
+Collapsed=0
+DockId=0x00000001,1
+
+[Window][Example: Documents]
 Pos=60,60
-Size=281,196
+Size=607,944
 Collapsed=0
 
+[Window][Dear ImGui Metrics/Debugger]
+Pos=933,241
+Size=339,375
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Window][Example: Property editor/##tree_37EC733C]
+IsChild=1
+Size=300,415
+
+[Window][Example: Log]
+Pos=84,236
+Size=500,400
+Collapsed=0
+
+[Window][Example: Assets Browser]
+Pos=60,60
+Size=800,480
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=87,190
+Size=623,414
+Collapsed=0
+
+[Window][DockSpace Demo]
+Size=1920,1009
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=60,60
+Size=500,440
+Collapsed=0
+
+[Window][Example: Simple layout/left pane_244A9CDE]
+IsChild=1
+Size=150,386
+
+[Window][Same title as another window##1]
+Pos=100,100
+Size=451,61
+Collapsed=0
+
+[Window][###AnimatedTitle]
+Pos=100,300
+Size=247,48
+Collapsed=0
+
+[Window][Same title as another window##2]
+Pos=128,228
+Size=451,61
+Collapsed=0
+
+[Window][Example: Long text display]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=56,62
+Size=353,1003
+Collapsed=0
+
+[Window][WindowOverViewport_11111111]
+Pos=0,0
+Size=1280,720
+Collapsed=0
+
+[Window][DockSpaceHost]
+Size=400,600
+Collapsed=0
+
+[Window][Scene View]
+Pos=0,0
+Size=992,720
+Collapsed=0
+DockId=0x00000001,0
+
+[Table][0x2048C668,2]
+RefScale=13
+Column 0  Width=4
+Column 1  Weight=2.0000
+
+[Table][0xB6880529,2]
+RefScale=13
+Column 0  Sort=0v
+
 [Docking][Data]
+DockSpace   ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1280,720 Split=X Selected=0x15E43931
+  DockNode  ID=0x00000001 Parent=0x08BD597D SizeRef=992,720 CentralNode=1 Selected=0x5E5F7166
+  DockNode  ID=0x00000002 Parent=0x08BD597D SizeRef=286,720 Selected=0x1FC7AC8C
 
