--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -11,7 +11,7 @@ DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
 Pos=0,0
-Size=992,720
+Size=955,720
 Collapsed=0
 DockId=0x00000001,1
 
@@ -35,9 +35,10 @@ IsChild=1
 Size=300,415
 
 [Window][Example: Log]
-Pos=84,236
-Size=500,400
+Pos=818,0
+Size=462,720
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Example: Assets Browser]
 Pos=60,60
@@ -103,9 +104,15 @@ Collapsed=0
 
 [Window][Scene View]
 Pos=0,0
-Size=992,720
+Size=955,720
 Collapsed=0
 DockId=0x00000001,0
+
+[Window][Logs]
+Pos=957,0
+Size=323,720
+Collapsed=0
+DockId=0x00000006,0
 
 [Table][0x2048C668,2]
 RefScale=13
@@ -117,7 +124,11 @@ RefScale=13
 Column 0  Sort=0v
 
 [Docking][Data]
-DockSpace   ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1280,720 Split=X Selected=0x15E43931
-  DockNode  ID=0x00000001 Parent=0x08BD597D SizeRef=992,720 CentralNode=1 Selected=0x5E5F7166
-  DockNode  ID=0x00000002 Parent=0x08BD597D SizeRef=286,720 Selected=0x1FC7AC8C
+DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1280,720 Split=X Selected=0x15E43931
+  DockNode      ID=0x00000005 Parent=0x08BD597D SizeRef=955,720 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=816,720 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=992,720 CentralNode=1 Selected=0x15E43931
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=286,720 Selected=0x1FC7AC8C
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=462,720 Selected=0x38CCB771
+  DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=323,720 Selected=0xD7907EC4
 
