working on some minimal ecs

--- a/ExampleApp/ExampleApp.vcxproj
+++ b/ExampleApp/ExampleApp.vcxproj
@@ -110,6 +110,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Main.cpp" />
+    <ClCompile Include="src\TestSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
