--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -10,8 +10,8 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
-Pos=0,0
-Size=955,720
+Pos=279,0
+Size=676,720
 Collapsed=0
 DockId=0x00000001,1
 
@@ -26,13 +26,14 @@ Size=339,375
 Collapsed=0
 
 [Window][Example: Property editor]
-Pos=60,60
-Size=430,450
+Pos=0,0
+Size=277,720
 Collapsed=0
+DockId=0x00000007,0
 
 [Window][Example: Property editor/##tree_37EC733C]
 IsChild=1
-Size=300,415
+Size=300,685
 
 [Window][Example: Log]
 Pos=818,0
@@ -103,8 +104,8 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=0,0
-Size=955,720
+Pos=279,0
+Size=676,720
 Collapsed=0
 DockId=0x00000001,0
 
@@ -113,6 +114,16 @@ Pos=957,0
 Size=323,720
 Collapsed=0
 DockId=0x00000006,0
+
+[Window][Stacked 2]
+Pos=527,313
+Size=226,94
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=435,274
+Size=409,172
+Collapsed=0
 
 [Table][0x2048C668,2]
 RefScale=13
@@ -123,12 +134,36 @@ Column 1  Weight=2.0000
 RefScale=13
 Column 0  Sort=0v
 
+[Table][0xEA44DE71,3]
+RefScale=13
+Column 0  Weight=1.0000
+Column 1  Width=84
+Column 2  Width=126
+
+[Table][0x6655AF53,4]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=70
+Column 2  Width=42
+Column 3  Weight=1.0000
+
+[Table][0x951FCC8A,6]
+RefScale=13
+Column 0  Width=28 Sort=0v
+Column 1  Width=70
+Column 2  Width=73
+Column 3  Width=68
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
 [Docking][Data]
-DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1280,720 Split=X Selected=0x15E43931
-  DockNode      ID=0x00000005 Parent=0x08BD597D SizeRef=955,720 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=816,720 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=992,720 CentralNode=1 Selected=0x15E43931
-      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=286,720 Selected=0x1FC7AC8C
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=462,720 Selected=0x38CCB771
-  DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=323,720 Selected=0xD7907EC4
+DockSpace         ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1280,720 Split=X Selected=0x15E43931
+  DockNode        ID=0x00000007 Parent=0x08BD597D SizeRef=277,720 Selected=0x256ED220
+  DockNode        ID=0x00000008 Parent=0x08BD597D SizeRef=1001,720 Split=X
+    DockNode      ID=0x00000005 Parent=0x00000008 SizeRef=676,720 Split=X
+      DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=816,720 Split=X
+        DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=992,720 CentralNode=1 Selected=0x15E43931
+        DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=286,720 Selected=0x1FC7AC8C
+      DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=462,720 Selected=0x38CCB771
+    DockNode      ID=0x00000006 Parent=0x00000008 SizeRef=323,720 Selected=0xD7907EC4
 
