plane mesh generation, binary serialization for assets

--- a/MofuEngine/MofuEngine.vcxproj
+++ b/MofuEngine/MofuEngine.vcxproj
@@ -102,10 +102,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Content\AssetImporter.cpp" />
     <ClCompile Include="Content\ContentManagement.cpp" />
+    <ClCompile Include="Content\PrimitiveMeshGeneration.cpp" />
+    <ClCompile Include="Content\ResourceCreation.cpp" />
     <ClCompile Include="Content\ShaderCompilation.cpp" />
     <ClCompile Include="Core\Engine.cpp" />
     <ClCompile Include="Core\Main.cpp" />
+    <ClCompile Include="ECS\Scene.cpp" />
+    <ClCompile Include="Editor\AssetBrowser.cpp" />
     <ClCompile Include="Editor\EditorInterface.cpp" />
     <ClCompile Include="External\imgui\include\imgui.cpp" />
     <ClCompile Include="External\imgui\include\imgui_demo.cpp" />
@@ -114,6 +119,7 @@
     <ClCompile Include="External\imgui\include\imgui_impl_win32.cpp" />
     <ClCompile Include="External\imgui\include\imgui_tables.cpp" />
     <ClCompile Include="External\imgui\include\imgui_widgets.cpp" />
+    <ClCompile Include="External\ufbx\ufbx.c" />
     <ClCompile Include="Graphics\D3D12\D3D12Core.cpp" />
     <ClCompile Include="Graphics\D3D12\D3D12DescriptorHeap.cpp" />
     <ClCompile Include="Graphics\D3D12\D3D12GPass.cpp" />
@@ -124,6 +130,7 @@
     <ClCompile Include="Graphics\D3D12\D3D12Resources.cpp" />
     <ClCompile Include="Graphics\D3D12\D3D12Shaders.cpp" />
     <ClCompile Include="Graphics\D3D12\D3D12Surface.cpp" />
+    <ClCompile Include="Graphics\GeometryData.cpp" />
     <ClCompile Include="Graphics\Renderer.cpp" />
     <ClCompile Include="Platform\Platform.cpp" />
     <ClCompile Include="Platform\Win32Platform.cpp" />
@@ -150,7 +157,10 @@
     <ClInclude Include="Common\CommonHeaders.h" />
     <ClInclude Include="Common\id.h" />
     <ClInclude Include="Common\StandardTypes.h" />
+    <ClInclude Include="Content\AssetImporter.h" />
     <ClInclude Include="Content\ContentManagement.h" />
+    <ClInclude Include="Content\PrimitiveMeshGeneration.h" />
+    <ClInclude Include="Content\ResourceCreation.h" />
     <ClInclude Include="Content\ShaderCompilation.h" />
     <ClInclude Include="Core\EngineModules.h" />
     <ClInclude Include="ECS\Component.h" />
@@ -160,6 +170,7 @@
     <ClInclude Include="ECS\Scene.h" />
     <ClInclude Include="ECS\System.h" />
     <ClInclude Include="ECS\Transform.h" />
+    <ClInclude Include="Editor\AssetBrowser.h" />
     <ClInclude Include="Editor\EditorInterface.h" />
     <ClInclude Include="External\imgui\include\imconfig.h" />
     <ClInclude Include="External\imgui\include\imgui.h" />
@@ -169,6 +180,7 @@
     <ClInclude Include="External\imgui\include\imstb_rectpack.h" />
     <ClInclude Include="External\imgui\include\imstb_textedit.h" />
     <ClInclude Include="External\imgui\include\imstb_truetype.h" />
+    <ClInclude Include="External\ufbx\ufbx.h" />
     <ClInclude Include="Graphics\D3D12\D3D12CommonHeaders.h" />
     <ClInclude Include="Graphics\D3D12\D3D12Core.h" />
     <ClInclude Include="Graphics\D3D12\D3D12DescriptorHeap.h" />
@@ -180,6 +192,7 @@
     <ClInclude Include="Graphics\D3D12\D3D12Resources.h" />
     <ClInclude Include="Graphics\D3D12\D3D12Shaders.h" />
     <ClInclude Include="Graphics\D3D12\D3D12Surface.h" />
+    <ClInclude Include="Graphics\GeometryData.h" />
     <ClInclude Include="Graphics\GraphicsPlatformInterface.h" />
     <ClInclude Include="Graphics\GraphicsTypes.h" />
     <ClInclude Include="Graphics\Renderer.h" />
