--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -10,8 +10,8 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
-Pos=279,0
-Size=676,720
+Pos=374,0
+Size=796,617
 Collapsed=0
 DockId=0x00000001,1
 
@@ -26,14 +26,13 @@ Size=339,375
 Collapsed=0
 
 [Window][Example: Property editor]
-Pos=0,0
-Size=277,720
+Size=430,617
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Example: Property editor/##tree_37EC733C]
 IsChild=1
-Size=300,685
+Size=300,582
 
 [Window][Example: Log]
 Pos=818,0
@@ -96,7 +95,7 @@ Collapsed=0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,0
-Size=1280,720
+Size=1600,900
 Collapsed=0
 
 [Window][DockSpaceHost]
@@ -104,14 +103,14 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=279,0
-Size=676,720
+Pos=374,0
+Size=796,617
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Logs]
-Pos=957,0
-Size=323,720
+Pos=1172,0
+Size=428,617
 Collapsed=0
 DockId=0x00000006,0
 
@@ -125,6 +124,22 @@ Pos=435,274
 Size=409,172
 Collapsed=0
 
+[Window][Asset Browser]
+Pos=374,619
+Size=1226,281
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Scene hierarchy]
+Pos=0,0
+Size=372,900
+Collapsed=0
+DockId=0x0000000B,0
+
+[Window][Scene hierarchy/##tree_2774B01A]
+IsChild=1
+Size=300,865
+
 [Table][0x2048C668,2]
 RefScale=13
 Column 0  Width=4
@@ -132,7 +147,7 @@ Column 1  Weight=2.0000
 
 [Table][0xB6880529,2]
 RefScale=13
-Column 0  Sort=0v
+Column 1  Sort=0^
 
 [Table][0xEA44DE71,3]
 RefScale=13
@@ -157,13 +172,17 @@ Column 4  Weight=1.0000
 Column 5  Width=-1
 
 [Docking][Data]
-DockSpace         ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1280,720 Split=X Selected=0x15E43931
-  DockNode        ID=0x00000007 Parent=0x08BD597D SizeRef=277,720 Selected=0x256ED220
-  DockNode        ID=0x00000008 Parent=0x08BD597D SizeRef=1001,720 Split=X
-    DockNode      ID=0x00000005 Parent=0x00000008 SizeRef=676,720 Split=X
-      DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=816,720 Split=X
-        DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=992,720 CentralNode=1 Selected=0x15E43931
-        DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=286,720 Selected=0x1FC7AC8C
-      DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=462,720 Selected=0x38CCB771
-    DockNode      ID=0x00000006 Parent=0x00000008 SizeRef=323,720 Selected=0xD7907EC4
+DockSpace             ID=0x08BD597D Window=0x1BBC0F80 Pos=0,0 Size=1600,900 Split=X Selected=0x15E43931
+  DockNode            ID=0x0000000B Parent=0x08BD597D SizeRef=372,900 Selected=0xBE5CABD5
+  DockNode            ID=0x0000000C Parent=0x08BD597D SizeRef=1226,900 Split=Y
+    DockNode          ID=0x00000009 Parent=0x0000000C SizeRef=1280,437 Split=X
+      DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=430,720 Selected=0x256ED220
+      DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=848,720 Split=X
+        DockNode      ID=0x00000005 Parent=0x00000008 SizeRef=418,720 Split=X
+          DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=816,720 Split=X
+            DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=992,720 CentralNode=1 Selected=0x15E43931
+            DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=286,720 Selected=0x1FC7AC8C
+          DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=462,720 Selected=0x38CCB771
+        DockNode      ID=0x00000006 Parent=0x00000008 SizeRef=428,720 Selected=0xD7907EC4
+    DockNode          ID=0x0000000A Parent=0x0000000C SizeRef=1280,281 Selected=0x36AF052B
 
