--- a/ExampleApp/ExampleApp.vcxproj.filters
+++ b/ExampleApp/ExampleApp.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClCompile Include="src\TestSystem.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\RenderingTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
